gac_sb/objects/INNOmission__c.object
<CustomObject>
    <fields>
        <fullName>Rentabilite_mission_Theorique__c</fullName>
        <formula>IF(ChiffreAffaire__c = 0,
null,
(ChiffreAffaire__c - Cout_mission_Theorique__c) / ChiffreAffaire__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité de la mission (Théorique)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <formula>CASE( Phase__c , 
&apos;Inactif / en attente de renouvellement&apos;, &apos;Inactive&apos;, 
&apos;Inactif / en attente de lancement&apos;, &apos;Inactive&apos;, 
&apos;Terminée&apos;, IF(NombreCFenCours__c &gt; 0, &apos;Active&apos;, &apos;Terminée&apos;), 
&apos;Terminée - Dossier à 0&apos;, &apos;Terminée&apos;, 
&apos;Active&apos;)</formula>
        <label>Statut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TauxCII__c</fullName>
        <defaultValue>0.2</defaultValue>
        <label>Taux CII</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_CIR__c</fullName>
        <label>Taux CIR</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TechMissionIdINNOV1__c</fullName>
        <label>Tech Mission Id INNO V1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechNombreDateDTValorisations__c</fullName>
        <label>Nombre de valos avec Date DT</label>
        <summaryFilterItems>
            <field>INNOvalo__c.Date_rendu_DT__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TechNombreTotalValorisations__c</fullName>
        <label>Nombre total de valorisations</label>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TempsTheoriquePlafond__c</fullName>
        <formula>IF(Contrat__r.Opportunite__r.renta_Total_jours_estimes_force__c != 0,
Contrat__r.Opportunite__r.renta_Total_jours_estimes_force__c,
Contrat__r.Opportunite__r.Total_jours_retenus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temps théorique plafond</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temps_theorique_mission__c</fullName>
        <label>Temps théorique initial</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temps_theorique_opportunite__c</fullName>
        <label>Temps théorique sur l&apos;opportunité</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TousDTrendus__c</fullName>
        <formula>TechNombreDateDTValorisations__c == TechNombreTotalValorisations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tous DT rendus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrigrammeTypeMission__c</fullName>
        <formula>CASE(TEXT(TypeMission__c),
&quot;Agrément&quot;,&quot;AGR&quot;,
&quot;Assistance technique à contrôle&quot;,&quot;ATC&quot;,
&quot;Audit de l&apos;égibilité&quot;,&quot;ELI&quot;,
&quot;Audit méthode CIR&quot;,&quot;MET&quot;,
&quot;CIJV&quot;,&quot;CIJV&quot;,
&quot;CIMA&quot;,&quot;CIMA&quot;,
&quot;CIR / CII Classique&quot;,&quot;STD (pour standard)&quot;,
&quot;CIR optimisation&quot;,&quot;OPT&quot;,
&quot;Conseil&quot;,&quot;CSL&quot;,
&quot;Crédit Impôt Collection&quot;,&quot;CIC&quot;,
&quot;Dossier justificatif&quot;,&quot;DJ&quot;,
&quot;Mobilisation de créances et préfinancement&quot;,&quot;MOB&quot;,
&quot;O2T&quot;,&quot;O2T&quot;,
&quot;Statut JEI&quot;,&quot;JEI&quot;,
&quot;Autres&quot;,&quot;DIV&quot;,
&quot;AS - Dépôt collaboratif&quot;,&quot;DCO&quot;,
&quot;AS - Dépôt mono-entreprise&quot;,&quot;DMO&quot;,
&quot;AS - Etude d&apos;opportunité&quot;,&quot;EOP&quot;,
&quot;AS - Management collaboratif&quot;,&quot;MCO&quot;,
&quot;AS - Management mono-entreprise&quot;,&quot;MMO&quot;,
&quot;AS - Plan de financement&quot;,&quot;FIN&quot;,
&quot;DI - Dépôt&quot;,&quot;DEP&quot;,
&quot;DI - Liquidation&quot;,&quot;LIQ&quot;,
&quot;Controlling R&amp;D&quot;,&quot;CTRL&quot;,
&quot;Gestion du risque&quot;,&quot;RISK&quot;,
&quot;IAS 38&quot;,&quot;IAS&quot;,
&quot;Marketing de l&apos;innovation&quot;,&quot;MKG&quot;,
&quot;Organisation R&amp;D&quot;,&quot;ORG&quot;,
&quot;Propriété intellectuelle&quot;,&quot;PI&quot;,
&quot;Valorisation&quot;,&quot;VALO&quot;,
&quot;CIR International&quot;,&quot;INTL&quot;,
&quot;&quot;)</formula>
        <label>Trigramme type de mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeMission__c</fullName>
        <label>Type de mission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agrément</fullName>
                </value>
                <value>
                    <fullName>AS - Dépôt collaboratif</fullName>
                </value>
                <value>
                    <fullName>AS - Dépôt mono-entreprise</fullName>
                </value>
                <value>
                    <fullName>AS - Etude d&apos;opportunité</fullName>
                </value>
                <value>
                    <fullName>AS - Management collaboratif</fullName>
                </value>
                <value>
                    <fullName>AS - Management mono-entreprise</fullName>
                </value>
                <value>
                    <fullName>AS - Plan de financement</fullName>
                </value>
                <value>
                    <fullName>Assistance technique à contrôle</fullName>
                </value>
                <value>
                    <fullName>Audit de l&apos;égibilité</fullName>
                </value>
                <value>
                    <fullName>Audit méthode CIR</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>CIJV</fullName>
                </value>
                <value>
                    <fullName>CIMA</fullName>
                </value>
                <value>
                    <fullName>CIR / CII Classique</fullName>
                </value>
                <value>
                    <fullName>CIR optimisation</fullName>
                </value>
                <value>
                    <fullName>Conseil</fullName>
                </value>
                <value>
                    <fullName>Controlling R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Crédit Impôt Collection</fullName>
                </value>
                <value>
                    <fullName>DI - Dépôt</fullName>
                </value>
                <value>
                    <fullName>DI - Liquidation</fullName>
                </value>
                <value>
                    <fullName>Dossier justificatif</fullName>
                </value>
                <value>
                    <fullName>Gestion du risque</fullName>
                </value>
                <value>
                    <fullName>IAS 38</fullName>
                </value>
                <value>
                    <fullName>Marketing de l&apos;innovation</fullName>
                </value>
                <value>
                    <fullName>Mobilisation de créances et préfinancement</fullName>
                </value>
                <value>
                    <fullName>O2T</fullName>
                </value>
                <value>
                    <fullName>Organisation R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Propriété intellectuelle</fullName>
                </value>
                <value>
                    <fullName>Statut JEI</fullName>
                </value>
                <value>
                    <fullName>Valorisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>renta_nb_interlocuteurs__c</fullName>
        <label>Nombre d&apos;interlocuteurs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_proj__c</fullName>
        <label>Nombre de projets à auditer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_redacs__c</fullName>
        <label>Nombre de projets à rédiger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_sites__c</fullName>
        <label>Nombre de sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_valo__c</fullName>
        <label>Nombre de valorisations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mission CIR</label>
    <nameField>
        <label>Nom de la mission</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missions CIR</pluralLabel>
    <recordTypes>
        <fullName>AS</fullName>
        <active>true</active>
        <label>AS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIN</fullName>
        <active>true</active>
        <label>CIN</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIR</fullName>
        <active>true</active>
        <label>CIR</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Equipe_Consulting__c</fullName>
        <label>Equipe Consulting</label>
    </sharingReasons>
    <validationRules>
        <fullName>INNO_jours_estimes_sup_opportunite</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(CreatedDate) &gt; Date(2016,05,31) &amp;&amp; ! !$User.ByPassValidationRules__c &amp;&amp; 
!ISBLANK(Temps_theorique_opportunite__c) &amp;&amp; 
!ISNULL(Temps_theorique_opportunite__c) &amp;&amp; 
Temps_theorique_mission__c &gt; Temps_theorique_opportunite__c</errorConditionFormula>
        <errorMessage>Le temps théorique de la mission ne peut pas être supérieur au temps théorique de l&apos;opportunité pour la première année de la mission.</errorMessage>
    </validationRules>
</CustomObject>